# MGJ-Chicken

./: .gitignore  CMakelists.txt  README.md
engine/: App.cpp  CMakeLists.txt  DeferredComposit.cpp  NumberManager.cpp  Quad.cpp  Shader.cpp  Texture.cpp  Timer.cpp  UberShader.cpp  main.cpp
engine/include/: App.h  DeferredComposit.h  MathUtil.h  NumberManager.h  Quad.h  Shader.h  Texture.h  Timer.h  UberShader.h  main.h
game/: CMakeLists.txt  Chicken.cpp  Chicken.h  ChickenWings.cpp  ChickenWings.h  Coin.cpp  Coin.h  ContactListener.cpp  ContactListener.h  Minecart.cpp  Minecart.h  Obstacle.cpp  Obstacle.h  PickUp.cpp  PickUp.h  Spline.cpp  Spline.h  SplineRenderer.cpp  SplineRenderer.h  main.cpp
imported/: CMakelists.txt
imported/glad/: CMakeLists.txt
imported/glad/include/glad/: glad.h
imported/glad/src/: glad.c
imported/stbi/: CMakeLists.txt  stb_build.cpp
